Add retry on test consuming a lot of memory